# seqviz

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
seqviz/: __init__.py  seqeval.py  sequence.py  util.py
tests/: test_seqviz.py
