[tool.poetry]
name = "seqviz"
version = "0.1.0"
description = ""
authors = ["Jan-Christoph Klie <git@mrklie.com>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
isort = "^5.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
