[tool.poetry]
name = "seqviz"
version = "0.1.0"
description = "seqviz is a Python package to visualize sequence tagging results. It can be either be used to print to console or in Jupyter Notebooks."
authors = ["Jan-Christoph Klie <git@mrklie.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
isort = "^5.4.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
